--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "dependencies": {
     "next": "9.1.4",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "bulma": "^0.7.5",
+    "node-sass": "^4.12.0",
+    "prop-types": "latest",
+    "@zeit/next-sass": "^1.0.1"
   }
 }
