--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.1.4",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
+    "@zeit/next-sass": "^1.0.1",
     "bulma": "^0.7.5",
+    "next": "9.1.4",
+    "next-images": "^1.3.0",
+    "next-offline": "^5.0.0",
     "node-sass": "^4.12.0",
     "prop-types": "latest",
-    "@zeit/next-sass": "^1.0.1"
+    "react": "16.12.0",
+    "react-dom": "16.12.0"
   }
 }
