--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "bulma": "^0.7.5",
+    "google-map-react": "^1.1.6",
     "next": "9.1.4",
     "next-images": "^1.3.0",
     "next-offline": "^5.0.0",
