Loading spinner which I probably have to move soon

--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.6",
     "@zeit/next-sass": "^1.0.1",
     "bulma": "^0.7.5",
     "google-map-react": "^1.1.6",
@@ -18,10 +23,6 @@
     "prop-types": "latest",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "@fortawesome/fontawesome": "^1.1.8",
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-brands-svg-icons": "^5.11.2",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.6"
+    "react-loader-spinner": "^3.1.5"
   }
 }
