--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "xo",
+    "lint:fix": "xo --fix"
   },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
@@ -25,5 +27,8 @@
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-loader-spinner": "^3.1.5"
+  },
+  "devDependencies": {
+    "xo": "^0.26.1"
   }
 }
