--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "prop-types": "latest",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-loader-spinner": "^3.1.5"
+    "react-loader-spinner": "^3.1.5",
+    "use-position": "0.0.6"
   },
   "devDependencies": {
     "xo": "^0.26.1"
