--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "bulma": "^0.7.5",
     "google-map-react": "^1.1.6",
     "jsonwebtoken": "^8.5.1",
-    "next": "9.1.4",
+    "next": "^9.3.4",
     "next-images": "^1.3.0",
     "next-offline": "^5.0.0",
     "node-sass": "^4.12.0",
     "prop-types": "latest",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-loader-spinner": "^3.1.5",
     "use-position": "0.0.6"
   },
